--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
   <div class="container">
     <div class="background">
       <img src="./Images/bg.gif" class="bgGif"/>
