music toggle placeholder removed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <center><img src="./Images/START_BUTTON.png" class="star" onmouseover="func()" id="startBtn"></center>
         <!--add an image that onclick uses the function playBGM-->
         <div class="musicOn">
-          <img src="./Images/flip.png" class="musicOn" onclick="playBGM()">
+          <img src="./Images/music_button.png" class="musicOn" onclick="playBGM()">
         </div>
     </div>
 </body>
