--- a/game/game.html
+++ b/game/game.html
@@ -2,15 +2,16 @@
 <html>
 
 <head>
-    <title>Point & Click</title>
+    <title>How to become Invisible - haz-m</title>
     <link rel="stylesheet" href="game.css">
+    <link rel="icon" href="../images/icon.png">
 </head>
 
 <body>
     <script src="game.js"></script>
     <div class="container">
         <div class ="background">
-            <img class="sceneImage" id="sceneImage" src="../images/3.png" onclick="changeImage()" width="1920" height="1080" />
+            <img class="sceneImage" id="sceneImage" src="../images/Transition/trans1.png" onclick="changeImage()" width="1920" height="1080" />
         </div>
     </div>
 </body>
