--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <title>Point & Click</title>
+  <title>How to become Invisible - haz-m</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="./Images/icon.png">
 </head>
 
 <body>
@@ -20,9 +21,7 @@
         <img src="./Images/music_button.png" class="musicOn" onclick="playBGM()">
       </div>
     </div>
-    <footer>
-      <p> Created by: Hasnat Mumtaz with help from Izzet Samil Döne </p>
-    </footer>
+      <!--Created by: Hasnat Mumtaz with help from Izzet Samil Döne-->
 </body>
 
 </html>
