--- a/game/game.html
+++ b/game/game.html
@@ -4,14 +4,14 @@
 <head>
     <title>How to become Invisible - haz-m</title>
     <link rel="stylesheet" href="game.css">
-    <link rel="icon" href="../images/icon.png">
+    <link rel="icon" href="../Images/icon.png">
 </head>
 
 <body>
     <script src="game.js"></script>
     <div class="container">
         <div class ="background">
-            <img class="sceneImage" id="sceneImage" src="../images/Transition/trans1.png" onclick="changeImage()" width="1920" height="1080" />
+            <img class="sceneImage" id="sceneImage" src="../Images/Transition/trans1.png" onclick="changeImage()" width="1920" height="1080" />
         </div>
     </div>
 </body>
