--- a/game/game.html
+++ b/game/game.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>How to become Invisible - haz-m</title>
+    <title>HZM - Sequential Narratives</title>
     <link rel="stylesheet" href="game.css">
     <link rel="icon" href="../Images/icon.png">
 </head>
@@ -10,8 +10,9 @@
 <body>
     <script src="game.js"></script>
     <div class="container">
-        <div class ="background">
-            <img class="sceneImage" id="sceneImage" src="../Images/Transition/trans1.png" onclick="changeImage()" width="1920" height="1080" />
+        <div class="background">
+            <img class="sceneImage" id="sceneImage" src="../Images/Transition/trans1.png" onclick="changeImage()"
+                width="1920" height="1080" />
         </div>
     </div>
 </body>
