--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>How to become Invisible - haz-m</title>
+  <title>HZM - Sequential Narratives</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./Images/icon.png">
 </head>
@@ -21,7 +21,7 @@
         <img src="./Images/music_button.png" class="musicOn" onclick="playBGM()">
       </div>
     </div>
-      <!--Created by: Hasnat Mumtaz with help from Izzet Samil Döne-->
+    <!--Created by: Hasnat Mumtaz with help from Izzet Samil Döne-->
 </body>
 
 </html>
